[package]
name = "armorlib"
description = "Easily scan files for threats to security and privacy."
version = "0.2.3"
authors = ["R. Miles McCain <libre@rmrm.io>"]
readme = "README.md"
license = "Apache-2.0"
keywords = ["os", "security", "steganography", "malware"]
categories = ["command-line-utilities", "os", "filesystem"]
repository = "https://github.com/milesmcc/ArmorLib"

[dependencies]
maplit = "1.0.1"
aho-corasick = "0.6.4"
clap = "~2.29.4"
log = "0.4"
simplelog = "0.5.0"
rust-crypto = "0.2.36"
kamadak-exif = "0.3.0"

[[bin]]
name = "armorlib"
path = "src/cli/bin.rs"
doc = false
